--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "browser-router": "^0.2.0",
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.1",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
