--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -2,33 +2,25 @@
   {
     "key": 1,
     "title": "React E-Commerce",
-    "imageSrc": "https://cdn.pixabay.com/photo/2018/02/04/17/39/crypto-currency-3130381_640.jpg",
+    "imageSrc": "assets/hero/shopImage.jpg",
     "description": "This is a project made with complete React js.",
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "demo": "https://pro-abhishek.github.io/friendlyMarket/",
+    "source": "https://github.com/pro-Abhishek/friendlyMarket"
   },
   {
     "key": 2,
-    "title": "MERN Blogging",
-    "imageSrc": "https://cdn.pixabay.com/photo/2017/05/02/15/30/streets-2278471_640.jpg",
+    "title": "Tech News",
+    "imageSrc": "assets/hero/news.jpg",
     "description": "This is a project made with complete React js.",
     "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "source": "https://github.com/pro-Abhishek/Tech-News"
   },
   {
     "key": 3,
-    "title": "React Recipe",
-    "imageSrc": "https://cdn.pixabay.com/photo/2016/08/16/17/12/skyscrapers-1598418_640.jpg",
+    "title": "Todolist",
+    "imageSrc": "assets/hero/todolist.jpg",
     "description": "This is a project made with complete React js.",
     "demo": "https://www.example.com",
-    "source": "https://www.github.com"
-  },
-  {
-    "key": 4,
-    "title": "React Firebase App",
-    "imageSrc": "https://cdn.pixabay.com/photo/2021/03/02/01/07/cyberpunk-6061251_640.jpg",
-    "description": "This is a project made with complete React js.",
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "source": "https://github.com/pro-Abhishek/ToDoList"
   }
 ]
